--- a/src/components/scss/AccountHeader.scss
+++ b/src/components/scss/AccountHeader.scss
@@ -1,8 +1,10 @@
 $light-dark: #3a3a3a;
+$light-blue-color: #7ba0fb;
 
 .account-header {
-  width: 1100px;
+  max-width: 1100px;
   margin: 0 auto;
+  padding: 0 20px;
 
   .account-header__title {
     padding: 10px 0;
@@ -15,13 +17,14 @@ $light-dark: #3a3a3a;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 48px;
     margin-bottom: 0;
+    padding: 10px 0;
     border-bottom: 1px solid #cacaca;
     font-size: 18px;
     text-align: center;
 
     a {
+      width: 200px;
       color: $light-dark;
       text-align: center;
     }
@@ -29,6 +32,17 @@ $light-dark: #3a3a3a;
     .nav__link {
       width: 200px;
       margin: 0 auto;
+      padding: 10px 0;
+      border-radius: 18px;
+      cursor: pointer;
+
+      &.active {
+        background-color: $light-blue-color;
+
+        a {
+          color: #fff;
+        }
+      }
     }
   }
 }
