--- a/src/components/scss/InquiryList.scss
+++ b/src/components/scss/InquiryList.scss
@@ -1,12 +1,12 @@
 .inquiry-list {
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 64px auto 300px;
+  padding: 0 20px;
 
   .inquiry-list__info {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    padding-top: 50px;
 
     .info__desc {
       margin-bottom: 0;
@@ -40,7 +40,6 @@
     }
   }
 
-
   .inquiry-list__table {
     flex-grow: 1;
     display: flex;
@@ -55,7 +54,7 @@
       height: 60px;
       border-top: 1px solid rgb(34, 34, 34);
       border-bottom: 1px solid rgb(204, 204, 204);
-      font-size: 18px;
+      font-size: 15px;
 
       .header__type {
         width: 150px;
@@ -84,34 +83,41 @@
       width: 100%;
       height: 60px;
       border-bottom: 1px solid rgb(238, 238, 238);
-      font-size: 18px;
-      cursor: pointer;
+      font-size: 15px;
+      font-weight: 300;
+      color: #656565;
 
       .item__type {
         width: 150px;
         margin-left: 72px;
+        color: #656565;
       }
 
       .item__title {
         width: 500px;
         margin-left: 72px;
+
+        a {
+          color: #222222;
+          transition: all 0.2s;
+
+          &:hover {
+            text-decoration: underline #222222;
+          }
+        }
       }
 
       .item__date {
         width: 200px;
         margin-left: 10px;
+        color: #656565;
       }
 
       .item__answer {
         width: 200px;
         margin-left: 72px;
+        color: #aeaeae;
       }
-    }
-
-    .inquiry-list__item-detail {
-      padding: 40px 50px;
-      border-bottom: 1px solid rgb(238, 238, 238);
-      background-color: rgb(250, 250, 250);
     }
   }
 }
