--- a/src/components/account/scss/accountHeader.scss
+++ b/src/components/account/scss/accountHeader.scss
@@ -5,6 +5,7 @@ $light-blue-color: #7ba0fb;
 	max-width: 1100px;
 	margin: 0 auto;
 	padding: 0 20px;
+			text-decoration: none;
 
 	.account-header__title {
 		padding: 10px 0;
@@ -33,6 +34,7 @@ $light-blue-color: #7ba0fb;
 			margin: 0 auto;
 			padding: 10px 0;
 			border-radius: 18px;
+			
 			
 			cursor: pointer;
 
