--- a/src/components/scss/AccountHeader.scss
+++ b/src/components/scss/AccountHeader.scss
@@ -36,6 +36,18 @@ $light-blue-color: #7ba0fb;
       border-radius: 18px;
       cursor: pointer;
 
+      .account_list {
+        text-decoration: none;
+      }
+
+      .account_ask {
+        text-decoration: none;
+      }
+
+      .account_mypage {
+        text-decoration: none;
+      }
+
       &.active {
         background-color: $light-blue-color;
 
