--- a/src/components/scss/InquiryList.scss
+++ b/src/components/scss/InquiryList.scss
@@ -12,11 +12,17 @@
       margin-bottom: 0;
       padding-left: 20px;
 
+
+
       li {
         margin-bottom: 0;
         font-weight: 300;
         list-style: circle;
       }
+    }
+
+    .service_inquiry {
+      text-decoration: none;
     }
 
     a {
