--- a/src/components/scss/header.scss
+++ b/src/components/scss/header.scss
@@ -11,10 +11,7 @@
 	height: 80px;
 	padding: 0 20px;
 	border-bottom: 1px solid transparent;
-	background-image: linear-gradient(134deg,
-			rgb(19, 183, 207) -5%,
-			rgb(54, 91, 180) 56%,
-			rgb(54, 91, 180) 56%);
+	background-image: linear-gradient(134deg, #8b17eb -5%, #8726f7 56%, #d834aa 56%);
 
 	.header__title {
 		font-size: 26px;
